# rrv

./: 0001-adaptive-sampling.patch  0001-rt-vis.patch  README  TODO
doc/: Makefile  proj_doc.bib  proj_doc.tex  proj_doc_content.tex
doc/api/: Makefile  doxygen.conf  doxygen.h
doc/cls/: fit-zp2.eps  fitthesis.cls  vut-zp2.eps
doc/fig/: vut_fit.eps
doc/img/: class_Entity.xmi  class_PatchCache.xmi  class_RadiosityRenderer.xmi  class_Scene.xmi
doc/uml/: classes.xmi
dtd/: scene.dtd
scene/: room2.xml  room3-computed.xml  room3.xml  room4.xml
scene/macro/: macro.xslt  room2.xml  room3.xml
src/: ArgumentParser.cpp  ArgumentParser.h  BarrelEntity.cpp  BarrelEntity.h  CMakeLists.txt  ComputeArguments.cpp  ComputeArguments.h  ConsoleProgressIndicator.cpp  ConsoleProgressIndicator.h  CuboidEntity.cpp  CuboidEntity.h  Entity.cpp  Entity.h  EntitySet.cpp  EntitySet.h  FormFactorEngine.cpp  FormFactorEngine.h  FormFactorHemicube.cpp  FormFactorHemicube.h  FormFactorView.cpp  FormFactorView.h  GlobeEntity.cpp  GlobeEntity.h  LinearAlgebra.h  Makefile  PatchCache.cpp  PatchCache.h  PatchCacheLine.cpp  PatchCacheLine.h  PatchRandomAccessEnumerator.cpp  PatchRandomAccessEnumerator.h  PatchSequenceEnumerator.cpp  PatchSequenceEnumerator.h  ProgressObserverMultiStep.cpp  ProgressObserverMultiStep.h  ProgressSubjectMultiStep.cpp  ProgressSubjectMultiStep.h  RadiosityRenderer.cpp  RadiosityRenderer.h  Scene.cpp  (+33 more)
video/: room4.flv.avi  room4.gray.avi  room4.mpeg4.avi  room4.wmv.avi  room4.x264.avi  room4.xvid.avi
